11/5: I've uploaded an [Exam2Outline.pdf outline] for Exam 2.
10/31: You might be interested in reading about [https://en.wikipedia.org/wiki/Perpetual_motion Perpetual motion machines] and some of the methods that have been proposed to skirt the laws of physics.
10/28: Here's my [http://physics.nfshost.com/3410/Diffusion/index.html diffusion demo] from class today, if you want to play with it. 
10/20: (2:55pm) Two small updates: 1) the figure in the solutions to HW7 was incorrect; I had the wavelength increasing in the wrong direction.  2) Problem 1 in HW8 is Harris 5.34, not 5.31.  And it's a 50eV electron, meaning an electron with 50eV total energy (not including rest energy--no relativity here!)
10/12: [HW7.pdf Homework 7] is now available.
10/5: The first exam and its solutions are now available online, under the Exams tab.  Feel free to ignore until after the break, if that sort of thing makes you nervous.  Enjoy your break!
10/3: [HW6S.pdf HW6 solutions] are now available.  (I've just added a figure to problem 2.)
10/1: Quick modification to the last problem on HW6, part b: you don't have to find k_max, just show that it is inversely proportional to L.  Don't kill yourself over it, though.
9/29: Here is the [Exam1Outline.pdf review outline] for the first exam.  Also, here is a [SampleExam.pdf sample] exam I gave to the equivalent of a 208 class; not helpful to study from but it gives you a sense of my "style".
9/27: The first exam will be on <b>Wednesday, October 5th</b>, and will cover chapters 2-4 in Harris.
9/16: There will be NO CLASS on Monday (the 19th).  Please read Chapter 3 of Harris and bring your questions and thoughts about the material to Wednesday's class, along with your solutions to HW4.
9/16: There was a small error in problem 3 of HW3; I forgot the 1/2.  The solutions have been corrected.
9/13: In [HW4.pdf Homework 4], problem 2a, you can drop the minus sign.