@@ -75,6 +75,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 11/7:</DIV>
+ Barring total failure on my part, I will hand out Exam 2 on Wednesday of this week, and it will be due the following Wednesday.  (You will get a week to do it, regardless.)
+<li>
 <DIV class="updated">Posted 11/5:</DIV>
  I've uploaded an <A HREF="Repository/Exam2Outline.pdf">outline</A> for Exam 2.
 <li>
@@ -153,7 +156,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TR><TH>#<TH>Starting
 <TH>Monday
 <TH>Wednesday
-<TH>Friday<!--11,11--><TR class="current"><TD class="weeknumber">11
+<TH>Friday<TR><TD class="weeknumber">11
 <TD class="date">10/31
 <TD class="topic">Statistical Mechanics	<TD class="chapter">9
 
@@ -323,7 +326,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TD>
 	<A HREF="Repository/F2.pdf">written</A><BR>
 	<A HREF="Repository/F2.mp3">audio</A>
-<TR><TD class="weeknumber">1
+<!--1,1--><TR class="current"><TD class="weeknumber">1
 <TD class="date">8/22
 <TD class="topic">Special Relativity	<TD class="chapter">2
 
