@@ -1,3 +1,4 @@
+11/7: Barring total failure on my part, I will hand out Exam 2 on Wednesday of this week, and it will be due the following Wednesday.  (You will get a week to do it, regardless.)
 11/5: I've uploaded an [Exam2Outline.pdf outline] for Exam 2.
 10/31: You might be interested in reading about [https://en.wikipedia.org/wiki/Perpetual_motion Perpetual motion machines] and some of the methods that have been proposed to skirt the laws of physics.
 10/28: Here's my [http://physics.nfshost.com/3410/Diffusion/index.html diffusion demo] from class today, if you want to play with it. 
